# secret-hub

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
apps/desktop/: index.html  package-lock.json  package.json  vite.config.ts
apps/desktop/src/: App.vue  styles.css  types.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/components/: AppSidebar.vue  EnvDetail.vue  EnvDialog.vue  SecretDetail.vue  SecretDialog.vue  SecretList.vue  SettingsDialog.vue
apps/desktop/src/utils/: entries.ts
crates/secret-hub-cli/: Cargo.toml
crates/secret-hub-cli/src/: main.rs
crates/secret-hub-core/: Cargo.toml
crates/secret-hub-core/src/: crypto.rs  envfile.rs  error.rs  lib.rs  model.rs  paths.rs  store.rs  totp.rs  vault.rs
docs/: ARCHITECTURE.md  DEVELOPMENT.md
