[package]
name = "shub"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "shub"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
arboard.workspace = true
chrono.workspace = true
clap.workspace = true
rpassword.workspace = true
secret-hub-core = { path = "../secret-hub-core" }
