[package]
name = "secret-hub-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
base64.workspace = true
chacha20poly1305.workspace = true
chrono.workspace = true
data-encoding.workspace = true
dirs.workspace = true
getrandom.workspace = true
hmac.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
thiserror.workspace = true
uuid.workspace = true
zeroize.workspace = true
